unpackaged/objects/SR_Academic_Coursework__c.object
<CustomObject>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dates_of_Study_End__c</fullName>
        <label>Dates of Study (End)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dates_of_Study_Start__c</fullName>
        <label>Dates of Study (Start)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grade_Received__c</fullName>
        <label>Grade Received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <label>Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summer_Research__c</fullName>
        <label>Summer Research</label>
        <referenceTo>Summer_Research__c</referenceTo>
        <relationshipLabel>Summer Research Academic Courseworks</relationshipLabel>
        <relationshipName>SR_Academic_Courseworks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SR Academic Coursework</label>
    <nameField>
        <displayFormat>SRAC-{0000000000}</displayFormat>
        <label>SR Academic Coursework ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SR Academic Courseworks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>